# Compiler

./: CMakeLists.txt  Keywords.cpp  Keywords.h  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  README.md  Testing.cpp  Testing.h  Token.h  Tokentype.h  code.txt  compile.sh  main.cpp  rules.txt  run.sh
AstNodes/: ASTNode.h  Assignment.h  BinaryExp.h  Lit.h  Makefile  NumLit.h  Program.cpp  Program.h
AstNodes/BinaryExp/: BinaryExp.h  MultExp.h  PlusExp.h
AstNodes/Lit/: VarLit.h
AstNodes/Statement/: Assignment.h
Utils/: TokenUtils.cpp
api/: api.py  compiler
api/output/: Makefile  UtilFunctions.c  UtilFunctions.h  data.h  functions.c  functions.h  out  output.c  print.c  print.h  vector.c  vector.h
output/: Makefile  out  output  output.c
src/: Generator.cpp  Generator.h  Keywords.cpp  Keywords.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  Testing.cpp  Token.h  Tokentype.h  main.cpp
src/AstNodes/: ASTNode.h  Block.cpp  Block.h  CMakeLists.txt  DataType.cpp  DataType.h  Exp.h  FreePtr.cpp  FreePtr.h  Program.cpp  Program.h  TypeError.cpp  TypeError.h  UnaryExp.h
src/AstNodes/BinaryExp/: AndExp.cpp  AndExp.h  BinaryExp.cpp  BinaryExp.h  DivExp.cpp  DivExp.h  EQEQExp.cpp  EQEQExp.h  GTEQExp.cpp  GTEQExp.h  GTExp.cpp  GTExp.h  LTEQExp.cpp  LTEQExp.h  LTExp.cpp  LTExp.h  MinusExp.cpp  MinusExp.h  MultExp.cpp  MultExp.h  OrExp.cpp  OrExp.h  PlusExp.cpp  PlusExp.h
src/AstNodes/Function/: Function.h  Print.cpp  Print.h
src/AstNodes/FunctionExp/: FunctionCallExp.cpp  FunctionCallExp.h  LambdaExp.cpp  LambdaExp.h  Print.cpp  Print.h  PrintExp.cpp  PrintExp.h
src/AstNodes/Lit/: ArrayLit.cpp  ArrayLit.h  BoolLit.cpp  BoolLit.h  Lit.h  NumLit.cpp  NumLit.h  StringLit.cpp  StringLit.h  VarLit.cpp  VarLit.h
src/AstNodes/Statement/: Assignment.cpp  Assignment.h  For.cpp  For.h  If.cpp  If.h  Return.cpp  Return.h  While.cpp  While.h
src/AstNodes/UnaryExp/: IndexExp.cpp  IndexExp.h  NegExp.cpp  NegExp.h  NotExp.cpp  NotExp.h  UnaryExp.cpp  UnaryExp.h
src/Utils/: TokenUtils.cpp  TokenUtils.h
